--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Sumit Shuvro Mistry<br /></h1>
-						<p>A Software Engineer with a knack for software designing, as well as making opimum strategies and management. </p>
+						<p>A Software Engineer with a knack for software designing, as well as making optimum strategies and management. </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
