--- a/generic.html
+++ b/generic.html
@@ -24,10 +24,10 @@
 							<li class="active"><a href="generic.html">Project Links</a></li>
 						</ul>
 						<ul class="icons">
+							<li><a href="https://www.linkedin.com/in/sumit-shuvro-99b806265/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://github.com/Sumit621" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://twitter.com/DenzoRohan" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.facebook.com/rohan.ssm" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="https://www.instagram.com/denzo_rohan/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="https://github.com/Sumit621" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
